# FileSigner

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml
docs/: API.md  timestamp-security.md
res/: filesigner.exe.manifest  generate_icon.py  resource.h  resource.rc
src/core/: authenticode.c  batch_signer.c  cert_gen.c  pe_file.c  timestamp.c
src/gui/: gui_main.c
src/gui/ui/: main.html
src/include/: authenticode.h  batch_signer.h  cert_gen.h  crypto_utils.h  file_utils.h  pe_file.h  signature_format.h  signer.h  timestamp.h  verifier.h
src/main/: cli.c  file_signer.c  main.c  verify_sig.c
src/utils/: crypto_utils.c  file_utils.c  signature_utils.c
test/scripts/: run_tests.sh
tools/: batch_verify.sh  generate_test_certs.sh
